--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,13 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 .heading-primary{
     color: #fff;
     text-transform: uppercase;
     backface-visibility: hidden;
-
+    margin-bottom: 60px;
 }
 .heading-primary-main{
     display: block;
@@ -73,7 +74,7 @@ body {
     font-size: 20px;
     font-weight: 400;
     letter-spacing: 17.4px;
-    animation: moveInRight 1s ease-in-out;
+    animation: moveInRight 2s ease-in;
 }
 
 @keyframes moveInLeft {
@@ -89,6 +90,7 @@ body {
         transform: translate(0);
     }
 }
+
 @keyframes moveInRight {
     0% {
         opacity: 0;
@@ -102,7 +104,66 @@ body {
         transform: translate(0);
     }
 }
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
 .btn:link,
 .btn:visited {
     text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+    position:relative;
 }
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
+}
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top:0;
+    left: 0;
+    z-index: -1;
+    transform: all .4s;
+}
+.btn-white::after {
+    background-color: #fff;
+}
+
+.btn:hover::after {
+   transform: scaleX(1.4) scaleY(1.6);
+   opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBottom .5s ease-out .75s; /* .75s is the delay*/
+    animation-fill-mode: backwards;
+}
+
