--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,15 @@ Dark green: #28b485
 
 */
 
-* { /* Reset css*/
+*,
+*::before,
+*::after{ /* Reset css*/
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 html {
-    font-size: 10px;
+    font-size: 62.5%; /*By default the font-size value is 16 pixeles so, to get this value in percent with 10 pexeles have to do the next operation 10/16 = 62.5 */
 }
 body {
     font-family: "Lato", sans-serif;
@@ -21,6 +23,8 @@ body {
     line-height: 1.7;
     color: #777;
     padding: 3rem;
+    box-sizing: border-box;
+
 }
 .header {
     height: 95vh;
@@ -93,7 +97,7 @@ body {
 }
 
 @keyframes moveInRight {
-    0% {
+    0% { 
         opacity: 0;
         transform: translateX(10rem);
     }
