--- a/css/style.css
+++ b/css/style.css
@@ -38,17 +38,17 @@ body {
     position: relative;
     clip-path: polygon(0 0,100% 0,100% 75vh, 0 100%);
 }
-.logo-box {
+.header__logo-box {
     position: absolute;
     top: 4rem;
     left: 4rem;
 
 }
-.logo{
+.header__logo{
     height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -143,7 +143,7 @@ body {
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 }
 
-.btn-white {
+.btn--white {
     background-color: #fff;
     color: #777;
 }
@@ -159,7 +159,7 @@ body {
     z-index: -1;
     transform: all .4s;
 }
-.btn-white::after {
+.btn--white::after {
     background-color: #fff;
 }
 
@@ -168,7 +168,7 @@ body {
    opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInBottom .5s ease-out .75s; /* .75s is the delay*/
     animation-fill-mode: backwards;
 }
