Refactored heading primary and sub

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
     backface-visibility: hidden;
     margin-bottom: 6rem;
 }
-.heading-primary-main{
+.heading-primary--main{
     display: block;
     font-size: 6rem;
     font-weight: 700;
@@ -74,7 +74,7 @@ body {
     *   animation-iteration-count: 3; Loop to repeat the animation
     */
 }
-.heading-primary-sub{
+.heading-primary--sub{
     display: block; 
     font-size: 2rem;
     font-weight: 400;
