--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -59,3 +59,19 @@ body {
         }
     }
 }
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    // technique to create gradient in the text
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    color: transparent;
+    background-clip: text;
+    letter-spacing: .2rem;
+    transition: all .2s;
+    &:hover {
+       transform: skewY(0) skewX(15deg) scale(1.1);
+       text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    }
+}
