create card styles

--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -68,6 +68,7 @@ body {
     background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
     color: transparent;
     background-clip: text;
+    -webkit-background-clip: text;
     letter-spacing: .2rem;
     transition: all .2s;
     &:hover {
