--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -17,6 +17,8 @@ $color-tertiary-dark: #5643fa;
 
 
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
 
 // FONT
 $default-font-size: 1.6rem;
