--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -10,6 +10,13 @@
             background-color: $color-white;
         }
     }
+    &--green {
+        background-color: $color-primary;
+        color: $color-white;
+        &::after {
+            background-color: $color-primary;
+        }
+    }
     &:link,&:visited {
         text-transform: uppercase;
         text-decoration: none;
