--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -24,6 +24,7 @@ $color-grey-light-2: #eee;
 $default-font-size: 1.6rem;
 
 $color-grey-dark: #777;
+$color-grey-dark-2: #999;
 $color-white: #fff;
 $color-black: #000;
 // GRID
