--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -17,7 +17,7 @@
             background-color: $color-primary;
         }
     }
-    &:link,&:visited {
+    &,&:link,&:visited {
         text-transform: uppercase;
         text-decoration: none;
         padding: 1.5rem 4rem;
@@ -25,9 +25,12 @@
         border-radius: 10rem;
         transition: all .2s;
         position:relative;
-        font-size: 1.6rem; 
+        font-size: 1.6rem;
+        // Change for the <button> element
+        border: none;
+        cursor: pointer;
     }
-    &:hover {
+    &:hover{
         transform: translateY(-0.3rem);
         box-shadow: 0 1rem 2rem rgba($color-black,.2);
         &::after {
@@ -35,7 +38,8 @@
             opacity: 0;
          }
     }
-    &:active {
+    &:active, &:focus  {
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black,.2);
     }
