--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -28,7 +28,7 @@
     padding: 15rem 0;
 }
 .section-book {
-    padding:15rem;
+    padding: 15rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
 }
 .book {
@@ -36,19 +36,15 @@
         105deg,
         rgba($color-white, .9) 0%,
         rgba($color-white, .9) 50%,
-        transparent 50%,
+        transparent 50%
     ),
-    url(../../img/nat-10.jpg); // Technique to create a gradient with the image in the background
-    background-size: cover; // Always use cover isn't equal to 100%
+    url(../img/nat-10.jpg); // Technique to create a gradient with the image in the background
+    background-size: 100%; // Always use cover isn't equal to 100%
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
     height: 50rem;
-}
-.book__form {
-    position: relative;
-    left: 0;
-    right: 0;
-    top: 5rem;
-    width: 50%;
-    padding: 6rem;
+    &__form {
+        width: 50%;
+        padding: 6rem;
+    }
 }
