--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -16,6 +16,9 @@
 @import "components/form";
 
 @import "pages/home";
+
+@import "layout/footer";
+
 @import "layout/grid";
 @import "layout/header";
 
