--- a/Natours/sass/components/_composition.scss
+++ b/Natours/sass/components/_composition.scss
@@ -5,7 +5,7 @@
         box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
         border-radius: 2px;
         position: absolute;
-        z-index: 10;
+        z-index: $z-composition-photo;
         transition: all .2s;
         outline-offset: 2rem;
         &--p1 {
