--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -18,7 +18,7 @@
 @import "pages/home";
 
 @import "layout/footer";
-
 @import "layout/grid";
 @import "layout/header";
+@import "layout/navigation";
 
