--- a/Natours/sass/layout/_navigation.scss
+++ b/Natours/sass/layout/_navigation.scss
@@ -1,7 +1,7 @@
 .navigation {
 
     &__checkbox {
-
+        display: none;
     }
     &__button {
         background-color: $color-white;
@@ -12,6 +12,7 @@
         right: 6rem;
         border-radius: 50%;
         z-index: $z-menu-button;
+        box-shadow: 0 1rem 3rem rgba($color-black, .1);
     }
     &__background {
         height: 6rem;
@@ -22,15 +23,18 @@
         right: 6.5rem;
         background-image: radial-gradient($color-primary-light, $color-primary-dark);
         z-index: $z-menu;
-        transform: scale(80);
+        transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+        // transform: scale(80);
     }
     &__nav {
-        height: 100%;
-        width: 100%;
+        height: 100vh;
         position: fixed;
         top: 0;
-        right: 0;
+        left: 0;
         z-index: $z-menu-nav;
+        opacity: 0;
+        width: 0;
+        transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
     &__list {
         position: absolute;
@@ -39,6 +43,7 @@
         transform: translate(-50%, -50%);
         list-style: none;
         text-align: center;
+        width: 100%;
     }
     &__item {
         margin: 1rem;
@@ -68,5 +73,14 @@
             transform: translateX(1rem);
         }
 
+    }
+
+    &__checkbox:checked ~ &__background {
+        transform: scale(80);
+    }
+    
+    &__checkbox:checked ~ &__nav {
+        opacity: 1;
+        width: 100%;
     }
 }
