Displayed popup and created table with css and using hyphens

--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -49,7 +49,8 @@ $_z10: 10;
 
 // Z-INDEX elements
 
-$z-menu: $_z8;
-$z-menu-nav: $_z9;
-$z-menu-button: $_z10;
+$z-menu: $_z7;
+$z-menu-nav: $_z8;
+$z-menu-button: $_z9;
+$z-popup: $_z10;
 $z-composition-photo: $_z1;
