Responsive design - part 1 - mixing functions

--- a/Natours/sass/base/_base.scss
+++ b/Natours/sass/base/_base.scss
@@ -8,8 +8,21 @@
 html {
     // This defines what 1rem is
     font-size: 62.5%; /*By default the font-size value is 16 pixeles so, to get this value in percent with 10 pixeles have to do the next operation 10/16 = 62.5 */
+    @include respond(tab-land) {
+        font-size: 56.25%; // 1 rem = 9px, 9/16 = 56.25%
+    }
+    // Be care when invoque the media query, this could generate a conflicts
+    @include respond(tab-port) {
+        font-size: 50%; // 1 rem = 8px, 8/16 = 50%
+    }
+    
+    @include respond(big-desktop) {
+        font-size: 75%; // 1 rem = 12px, 12/16 = 75%
+    }
+    
 }
 
 body {
     box-sizing: border-box;
 }
+
