--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -1,4 +1,18 @@
 /*
+    0   -   600px:      Phone
+    600 -   900px:      Tablet portait
+    900 -   1200px:     Tablet landscape
+    [1200  -   1800px]  Is where our normal style apply
+    1800px + :  Big desktop   
+
+    $breakpoint argument choices:
+    -   phone
+    -   tab-port
+    -   tab-land
+    -   big-desktop
+    1em = 16px
+*/
+/*
 COLORS:
 Light green: #7ed56f
 Medium green: #55c57a
@@ -44,6 +58,15 @@ Dark green: #28b485
 html {
   font-size: 62.5%;
   /*By default the font-size value is 16 pixeles so, to get this value in percent with 10 pixeles have to do the next operation 10/16 = 62.5 */ }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
