Writing Media Queries - Base, Typography and Layout

--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -30,7 +30,10 @@ $color-white: #fff;
 $color-black: #000;
 // GRID
 $grid-width: 114rem;
+$grid-width-small: 50rem;
+
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
 
 //https://www.youtube.com/watch?v=Agav-W1viFI
