--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 
 }
 
@@ -24,6 +23,7 @@ body {
         *   animation-delay: 3s; Delay to start the animation
         *   animation-iteration-count: 3; Loop to repeat the animation
         */
+
     }
     &--sub{
         display: block; 
@@ -31,8 +31,9 @@ body {
         font-weight: 400;
         letter-spacing: 1.75rem;
         animation: moveInRight 1s ease-in;
+
     }
-    .heading-primary{
+    .heading-primary {
         color: $color-white;
         text-transform: uppercase;
         backface-visibility: hidden;
@@ -49,6 +50,10 @@ body {
             *   animation-delay: 3s; Delay to start the animation
             *   animation-iteration-count: 3; Loop to repeat the animation
             */
+            @include respond(phone) {
+                letter-spacing: 1rem;
+                font-family: 5rem;
+            }
         }
         &--sub{
             display: block; 
@@ -56,6 +61,9 @@ body {
             font-weight: 400;
             letter-spacing: 1.75rem;
             animation: moveInRight 1s ease-in;
+            @include respond(phone) {
+                letter-spacing: .5rem;
+            }
         }
     }
 }
@@ -71,6 +79,13 @@ body {
     -webkit-background-clip: text;
     letter-spacing: .2rem;
     transition: all .2s;
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
     &:hover {
        transform: skewY(0) skewX(15deg) scale(1.1);
        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
