--- a/Natours/sass/layout/_navigation.scss
+++ b/Natours/sass/layout/_navigation.scss
@@ -14,6 +14,11 @@
         z-index: $z-menu-button;
         box-shadow: 0 1rem 3rem rgba($color-black, .1);
         text-align: center;
+        cursor: pointer;
+        @include respond(tab-port) {
+            top: 4rem;
+            right: 4rem;  
+        }
     }
     &__background {
         height: 6rem;
@@ -26,6 +31,10 @@
         z-index: $z-menu;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
         // transform: scale(80);
+        @include respond(tab-port) {
+            top: 4.5rem;
+            right: 4.5rem;  
+        }
     }
     &__nav {
         height: 100vh;
