📱  Detected device resolution with DPI

--- a/Natours/sass/layout/_header.scss
+++ b/Natours/sass/layout/_header.scss
@@ -4,13 +4,19 @@
         to right bottom,
         rgba($color-primary-light,0.8),
         rgba($color-primary-dark,0.8)
-    ),url("../img/hero.jpg");
+    ),url("../img/hero-small.jpg");
     background-size: cover;
     background-position:top;
     position: relative;
     -webkit-clip-path: polygon(0 0,100% 0,100% 75vh, 0 100%);
     clip-path: polygon(0 0,100% 0,100% 75vh, 0 100%);
-
+    @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) { // Resolution apple screen, the `,` is like `or`
+        background-image: linear-gradient(
+            to right bottom,
+            rgba($color-secondary-light,0.8),
+            rgba($color-secondary-dark,0.8)
+        ),url("../img/hero.jpg");
+    }
     @include respond(phone) {
         height: 69vh;
         -webkit-clip-path: polygon(0 0, 100% 0,100% 45vh, 0 80%);
