--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -23,6 +23,10 @@ body {
         *   animation-delay: 3s; Delay to start the animation
         *   animation-iteration-count: 3; Loop to repeat the animation
         */
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
 
     }
     &--sub{
@@ -31,6 +35,10 @@ body {
         font-weight: 400;
         letter-spacing: 1.75rem;
         animation: moveInRight 1s ease-in;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
 
     }
     .heading-primary {
@@ -80,6 +88,7 @@ body {
     letter-spacing: .2rem;
     transition: all .2s;
     @include respond(tab-port) {
+        background-image: linear-gradient(to right, $color-secondary-light, $color-secondary-dark);
         font-size: 3rem;
     }
 
