--- a/Natours/sass/layout/_header.scss
+++ b/Natours/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    height: 85vh;
+    height: 95vh;
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light,0.8),
@@ -8,13 +8,18 @@
     background-size: cover;
     background-position:top;
     position: relative;
-    -webkit-clip-path: polygon(0 0,100% 0,100% 75vh, 0 100%);
-    clip-path: polygon(0 0,100% 0,100% 75vh, 0 100%);
-    @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) { // Resolution apple screen, the `,` is like `or`
+    @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+        -webkit-clip-path: polygon(0 0,100% 0,100% 75vh, 0 100%);
+        clip-path: polygon(0 0,100% 0,100% 75vh, 0 100%);   
+        height: 95vh;
+    }
+    @media (min-resolution: 192dpi) and (min-width: 37.5em),
+    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    (min-width: 125em) { // Resolution apple screen, the `,` is like `or`
         background-image: linear-gradient(
             to right bottom,
-            rgba($color-secondary-light,0.8),
-            rgba($color-secondary-dark,0.8)
+            rgba($color-primary-light,0.8),
+            rgba($color-primary-dark,0.8)
         ),url("../img/hero.jpg");
     }
     @include respond(phone) {
