--- a/Natours/sass/components/_composition.scss
+++ b/Natours/sass/components/_composition.scss
@@ -1,5 +1,8 @@
 .composition {
     position: relative;
+    @include respond (mobile-s) {
+        height: 550px;
+    }
     &__photo {
         width: 55%;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
@@ -15,6 +18,15 @@
             box-shadow: 0 1.5rem 3rem rgba($color-black, .3);
 
         }
+        @include respond(mobile-s) {
+            float: none;
+            position: relative;
+            display: block;
+            margin: 0;
+            width: 100%;
+            margin-bottom: 20px;
+            border-radius: 3px;
+        }
         &--p1 {
             left: 0;
             top: -2rem;
@@ -23,6 +35,11 @@
                 transform: scale(1.2);
 
             }
+            @include respond(mobile-s) {
+                top: 0;
+                z-index: 0;
+                transform: none;
+            }
         }
         &--p2 {
             right: 0;
@@ -30,6 +47,11 @@
             @include respond(tab-port) {
                 top: -1rem; 
                 transform: scale(1.3);
+            }
+            @include respond(mobile-s) {
+                top: 0;
+                z-index: 0;
+                transform: none;
             }
         }
         &--p3 {
@@ -40,6 +62,11 @@
                 left: 0;
                 transform: scale(1.1);
                 z-index: $z-composition-photo;
+            }
+            @include respond(mobile-s) {
+                top: 0;
+                z-index: 0;
+                transform: none;
             }
         }
         &:hover {
