--- a/Natours/sass/layout/_navigation.scss
+++ b/Natours/sass/layout/_navigation.scss
@@ -15,9 +15,19 @@
         box-shadow: 0 1rem 3rem rgba($color-black, .1);
         text-align: center;
         cursor: pointer;
+
         @include respond(tab-port) {
             top: 4rem;
             right: 4rem;  
+        }
+        @include respond(mobile-s) {
+            background-color: transparent;
+            color: $color-white;
+            top: 2rem;
+            left: 2rem;
+            border-radius: 0;
+            box-shadow: none;
+            position: absolute;
         }
     }
     &__background {
@@ -31,9 +41,14 @@
         z-index: $z-menu;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
         // transform: scale(80);
+
         @include respond(tab-port) {
             top: 4.5rem;
             right: 4.5rem;  
+        }
+        @include respond(mobile-s) {
+            top: -10rem;
+            left: -3rem;
         }
     }
     &__nav {
@@ -54,6 +69,12 @@
         list-style: none;
         text-align: center;
         width: 100%;
+        transition: all 2s;
+        @include respond(mobile-s) {
+            overflow: hidden;
+            height: 0;
+            animation-delay: .1s;
+        }
     }
     &__item {
         margin: 1rem;
@@ -103,6 +124,9 @@
             height: 2px;
             background-color: $color-grey-dark-2;
             display: inline-block;
+            @include respond(mobile-s) {
+                background-color: $color-white;
+            }
         }
 
         &::before,
@@ -134,5 +158,15 @@
     &__checkbox:checked + &__button &__icon::after {
         top:0;
         transform: rotate(-135deg);
+    }
+    &__checkbox:checked ~ &__nav &__list {
+        @include respond(mobile-s) {
+            height: 400px;
+        }
+    }
+    &__checkbox:checked ~ &__button {
+        @include respond(mobile-s) {
+            position: fixed;
+        }
     }
 }
